--- a/deep learning/hw05/chapter11_part03_transformer.ipynb
+++ b/deep learning/hw05/chapter11_part03_transformer.ipynb
@@ -861,6 +861,99 @@
     "              metrics=[\"accuracy\"])\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cbcc492",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 1s/step - accuracy: 0.1137 - loss: -21.6519 - val_accuracy: 0.5862 - val_loss: 17.8958\n",
+      "Epoch 2/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.0904 - loss: -30.9171 - val_accuracy: 0.5517 - val_loss: 25.5218\n",
+      "Epoch 3/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.0932 - loss: -47.1383 - val_accuracy: 0.4138 - val_loss: 45.8896\n",
+      "Epoch 4/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.0852 - loss: -62.6493 - val_accuracy: 0.5172 - val_loss: 48.9415\n",
+      "Epoch 5/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.0900 - loss: -68.6880 - val_accuracy: 0.6897 - val_loss: 38.0155\n",
+      "Epoch 6/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.1030 - loss: -90.3422 - val_accuracy: 0.6552 - val_loss: 48.5578\n",
+      "Epoch 7/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.1034 - loss: -106.6134 - val_accuracy: 0.6897 - val_loss: 54.5718\n",
+      "Epoch 8/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 2s/step - accuracy: 0.1712 - loss: -116.2716 - val_accuracy: 0.6207 - val_loss: 74.2083\n",
+      "Epoch 9/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1s/step - accuracy: 0.1297 - loss: -137.4271 - val_accuracy: 0.6207 - val_loss: 85.4375\n",
+      "Epoch 10/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0673 - loss: -181.0288 - val_accuracy: 0.5862 - val_loss: 90.2431\n",
+      "Epoch 11/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.1142 - loss: -168.3115 - val_accuracy: 0.4828 - val_loss: 140.0004\n",
+      "Epoch 12/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.1119 - loss: -206.0161 - val_accuracy: 0.6897 - val_loss: 94.6945\n",
+      "Epoch 13/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0842 - loss: -244.0379 - val_accuracy: 0.4828 - val_loss: 164.2860\n",
+      "Epoch 14/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0850 - loss: -249.1944 - val_accuracy: 0.6207 - val_loss: 138.9844\n",
+      "Epoch 15/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.1279 - loss: -244.7692 - val_accuracy: 0.4138 - val_loss: 208.2614\n",
+      "Epoch 16/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.1219 - loss: -263.5559 - val_accuracy: 0.4483 - val_loss: 209.5616\n",
+      "Epoch 17/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0903 - loss: -286.6015 - val_accuracy: 0.6207 - val_loss: 161.7772\n",
+      "Epoch 18/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0875 - loss: -325.6455 - val_accuracy: 0.6207 - val_loss: 185.1237\n",
+      "Epoch 19/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.1113 - loss: -386.3518 - val_accuracy: 0.5517 - val_loss: 234.6505\n",
+      "Epoch 20/20\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2s/step - accuracy: 0.0854 - loss: -352.3824 - val_accuracy: 0.4138 - val_loss: 300.1219\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x1cf413dd2a0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"full_transformer_encoder.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(int_train_ds, validation_data=int_val_ds, epochs=20, callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c286fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m4/4\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 867ms/step - accuracy: 0.5983 - loss: 17.7623\n",
+      "Test acc: 0.600\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.models.load_model(\n",
+    "    \"full_transformer_encoder.keras\",\n",
+    "    custom_objects={\"TransformerEncoder\": TransformerEncoder,\n",
+    "                    \"PositionalEmbedding\": PositionalEmbedding})\n",
+    "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
