--- a/complex dynamic networks/final/q1.ipynb
+++ b/complex dynamic networks/final/q1.ipynb
@@ -15,6 +15,37 @@
     "import pandas as pd\n",
     "from networkx.algorithms import community"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e3b6247",
+   "metadata": {},
+   "source": [
+    " Influence Diffusion (Independent Cascade Model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e934d838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_ic(G, seeds, p=0.1):\n",
+    "    active = set(seeds)\n",
+    "    newly_active = set(seeds)\n",
+    "\n",
+    "    while newly_active:\n",
+    "        next_new = set()\n",
+    "        for u in newly_active:\n",
+    "            for v in G.neighbors(u):\n",
+    "                if v not in active:\n",
+    "                    if random.random() < p:\n",
+    "                        next_new.add(v)\n",
+    "        newly_active = next_new\n",
+    "        active |= newly_active\n",
+    "    return active"
+   ]
   }
  ],
  "metadata": {
