--- a/complex dynamic networks/final/q1.ipynb
+++ b/complex dynamic networks/final/q1.ipynb
@@ -46,6 +46,39 @@
     "        active |= newly_active\n",
     "    return active"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "972820ab",
+   "metadata": {},
+   "source": [
+    "Influence Diffusion (Linear Threshold Model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a1fa5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_lt(G, seeds):\n",
+    "    thresholds = {node: random.uniform(0, 1) for node in G.nodes()}\n",
+    "    active = set(seeds)\n",
+    "    changed = True\n",
+    "\n",
+    "    while changed:\n",
+    "        changed = False\n",
+    "        for node in G.nodes():\n",
+    "            if node not in active:\n",
+    "                neighbors = list(G.predecessors(node)) if G.is_directed() else list(G.neighbors(node))\n",
+    "                active_neighbors = len([n for n in neighbors if n in active])\n",
+    "                if neighbors:\n",
+    "                    if (active_neighbors / len(neighbors)) >= thresholds[node]:\n",
+    "                        active.add(node)\n",
+    "                        changed = True\n",
+    "    return active"
+   ]
   }
  ],
  "metadata": {
