--- a/complex dynamic networks/final/q1.ipynb
+++ b/complex dynamic networks/final/q1.ipynb
@@ -79,6 +79,54 @@
     "                        changed = True\n",
     "    return active"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53854e64",
+   "metadata": {},
+   "source": [
+    "Main analysis function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5409f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_influence(graphs, ks=[5,10,20,25,30], trials=10, p=0.1, model=\"IC\"):\n",
+    "    results = {}\n",
+    "    tables = {}\n",
+    "    for name, G in graphs.items():\n",
+    "        n = G.number_of_nodes()\n",
+    "        cent = {\n",
+    "            'Degree': dict(nx.degree_centrality(G)),\n",
+    "            'Closeness': dict(nx.closeness_centrality(G)),\n",
+    "            'Betweenness': dict(nx.betweenness_centrality(G)),\n",
+    "            'PageRank': dict(nx.pagerank(G))\n",
+    "        }\n",
+    "        results[name] = {}\n",
+    "        data = []\n",
+    "        for measure, scores in cent.items():\n",
+    "            sorted_nodes = sorted(scores, key=lambda x: scores[x], reverse=True)\n",
+    "            avg_fracs = []\n",
+    "            for k in ks:\n",
+    "                seeds = sorted_nodes[:k]\n",
+    "                influences = []\n",
+    "                for _ in range(trials):\n",
+    "                    if model == \"IC\":\n",
+    "                        active = simulate_ic(G, seeds, p)\n",
+    "                    elif model == \"LT\":\n",
+    "                        active = simulate_lt(G, seeds)\n",
+    "                    influences.append(len(active))\n",
+    "                avg_inf = np.mean(influences)\n",
+    "                avg_fracs.append(avg_inf / n)\n",
+    "                data.append([measure, k, avg_inf / n])\n",
+    "            results[name][measure] = avg_fracs\n",
+    "        tables[name] = pd.DataFrame(data, columns=['Centrality', 'k', 'Influence'])\n",
+    "    return results, tables"
+   ]
   }
  ],
  "metadata": {
