--- a/complex dynamic networks/final/q1.ipynb
+++ b/complex dynamic networks/final/q1.ipynb
@@ -127,6 +127,79 @@
     "        tables[name] = pd.DataFrame(data, columns=['Centrality', 'k', 'Influence'])\n",
     "    return results, tables"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95b630b9",
+   "metadata": {},
+   "source": [
+    "Plotting function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f9eac12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_results(results, ks, model=\"IC\"):\n",
+    "    for graph_name, measures in results.items():\n",
+    "        plt.figure(figsize=(8, 5))\n",
+    "        for measure, fracs in measures.items():\n",
+    "            plt.plot(ks, fracs, marker='o', label=measure)\n",
+    "        plt.title(f'{model} Model Influence on {graph_name}')\n",
+    "        plt.xlabel('Seed Set Size (k)')\n",
+    "        plt.ylabel('Average Influence (fraction)')\n",
+    "        plt.xticks(ks)\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4354faa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_comparison_bar(tables, model):\n",
+    "    for name, df in tables.items():\n",
+    "        pivot_df = df.pivot(index='k', columns='Centrality', values='Influence')\n",
+    "        pivot_df.plot(kind='bar', figsize=(10, 6))\n",
+    "        plt.title(f'Influence Comparison (Bar) - {model} Model - {name}')\n",
+    "        plt.xlabel('Seed Set Size (k)')\n",
+    "        plt.ylabel('Average Influence (fraction)')\n",
+    "        plt.legend(title='Centrality')\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f0cd2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_centrality_comparison(results_ic, results_lt, ks):\n",
+    "    for graph_name in results_ic:\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        for centrality in results_ic[graph_name]:\n",
+    "            plt.plot(ks, results_ic[graph_name][centrality], label=f'IC - {centrality}', linestyle='--')\n",
+    "            plt.plot(ks, results_lt[graph_name][centrality], label=f'LT - {centrality}', linestyle='-')\n",
+    "        plt.title(f'IC vs LT Influence Comparison - {graph_name}')\n",
+    "        plt.xlabel('Seed Set Size (k)')\n",
+    "        plt.ylabel('Average Influence (fraction)')\n",
+    "        plt.xticks(ks)\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
   }
  ],
  "metadata": {
