--- a/complex dynamic networks/final/q1.ipynb
+++ b/complex dynamic networks/final/q1.ipynb
@@ -200,6 +200,27 @@
     "        plt.tight_layout()\n",
     "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63dd14e0",
+   "metadata": {},
+   "source": [
+    "Tabular Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7850894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_tables(tables):\n",
+    "    for name, df in tables.items():\n",
+    "        print(f\"\\nInfluence Table for {name}:\")\n",
+    "        print(df.pivot(index='k', columns='Centrality', values='Influence').round(3))"
+   ]
   }
  ],
  "metadata": {
