--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -51,6 +51,35 @@
     "\n",
     "    return G_train, test_pos, test_neg"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48edb415",
+   "metadata": {},
+   "source": [
+    "Scoring methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf381f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_method(G_train, u, v, method):\n",
+    "    if method == 'common_neighbors':\n",
+    "        return len(list(nx.common_neighbors(G_train, u, v)))\n",
+    "    if method == 'jaccard':\n",
+    "        return next(nx.jaccard_coefficient(G_train, [(u, v)]))[2]\n",
+    "    if method == 'adamic_adar':\n",
+    "        return next(nx.adamic_adar_index(G_train, [(u, v)]))[2]\n",
+    "    if method == 'pref_attachment':\n",
+    "        return next(nx.preferential_attachment(G_train, [(u, v)]))[2]\n",
+    "    if method == 'resource_allocation':\n",
+    "        return next(nx.resource_allocation_index(G_train, [(u, v)]))[2]\n",
+    "    raise ValueError(f\"Unknown method {method}\")"
+   ]
   }
  ],
  "metadata": {
