--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -80,6 +80,54 @@
     "        return next(nx.resource_allocation_index(G_train, [(u, v)]))[2]\n",
     "    raise ValueError(f\"Unknown method {method}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "421a6dba",
+   "metadata": {},
+   "source": [
+    "Method evaluation with detailed scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c4c64d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_method(G_train, test_pos, test_neg, method):\n",
+    "    pairs = test_pos + test_neg\n",
+    "    y_true = np.array([1]*len(test_pos) + [0]*len(test_neg))\n",
+    "    scores = np.array([score_method(G_train, u, v, method) for u, v in pairs])\n",
+    "\n",
+    "    # ROC AUC\n",
+    "    auc_score = roc_auc_score(y_true, scores)\n",
+    "    # ROC curve data\n",
+    "    fpr, tpr, _ = roc_curve(y_true, scores)\n",
+    "\n",
+    "    # Precision-Recall AUC\n",
+    "    precision_vals, recall_vals, _ = precision_recall_curve(y_true, scores)\n",
+    "    pr_auc = auc(recall_vals, precision_vals)\n",
+    "\n",
+    "    # Precision@k\n",
+    "    k = len(test_pos)\n",
+    "    idx_top = np.argsort(scores)[::-1][:k]\n",
+    "    y_pred_top = np.zeros_like(y_true)\n",
+    "    y_pred_top[idx_top] = 1\n",
+    "    precision_k = precision_score(y_true, y_pred_top)\n",
+    "\n",
+    "    return {\n",
+    "        'method': method,\n",
+    "        'AUC': auc_score,\n",
+    "        'PR_AUC': pr_auc,\n",
+    "        'Precision@k': precision_k,\n",
+    "        'fpr': fpr,\n",
+    "        'tpr': tpr,\n",
+    "        'precision_curve': precision_vals,\n",
+    "        'recall_curve': recall_vals\n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
