--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -128,6 +128,43 @@
     "        'recall_curve': recall_vals\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "166ce213",
+   "metadata": {},
+   "source": [
+    "Comparison across methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6abc61d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_link_prediction(G, methods=None, train_frac=0.8, test_frac=0.1, seed=42):\n",
+    "    methods = methods or [\n",
+    "        'common_neighbors',\n",
+    "        'jaccard',\n",
+    "        'adamic_adar',\n",
+    "        'pref_attachment',\n",
+    "        'resource_allocation'\n",
+    "    ]\n",
+    "    G_train, test_pos, test_neg = train_test_split_graph(G, train_frac, test_frac, seed)\n",
+    "    detail = [evaluate_method(G_train, test_pos, test_neg, m) for m in methods]\n",
+    "    summary = pd.DataFrame([\n",
+    "        {\n",
+    "            'method': r['method'],\n",
+    "            'AUC': r['AUC'],\n",
+    "            'PR_AUC': r['PR_AUC'],\n",
+    "            'Precision@k': r['Precision@k']\n",
+    "        }\n",
+    "        for r in detail\n",
+    "    ])\n",
+    "    return summary, detail"
+   ]
   }
  ],
  "metadata": {
