--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -165,6 +165,34 @@
     "    ])\n",
     "    return summary, detail"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca023e4a",
+   "metadata": {},
+   "source": [
+    "Plotting functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8675dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_metric_bars(df):\n",
+    "    df_plot = df.set_index('method')\n",
+    "    fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    df_plot['AUC'].plot(kind='bar', ax=axes[0], title='ROC AUC Comparison')\n",
+    "    axes[0].set_ylabel('AUC')\n",
+    "    df_plot['PR_AUC'].plot(kind='bar', ax=axes[1], title='PR AUC Comparison')\n",
+    "    axes[1].set_ylabel('PR AUC')\n",
+    "    df_plot['Precision@k'].plot(kind='bar', ax=axes[2], title='Precision@k Comparison')\n",
+    "    axes[2].set_ylabel('Precision@k')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
