--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -177,6 +177,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a7c81923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_roc_curves(detail_results):\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    for res in detail_results:\n",
+    "        plt.plot(res['fpr'], res['tpr'], label=f\"{res['method']} (AUC={res['AUC']:.2f})\")\n",
+    "    plt.plot([0, 1], [0, 1], 'k--')\n",
+    "    plt.title('ROC Curves')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a8675dbb",
    "metadata": {},
    "outputs": [],
