--- a/complex dynamic networks/final/q3.ipynb
+++ b/complex dynamic networks/final/q3.ipynb
@@ -197,6 +197,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13d580bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_pr_curves(detail_results):\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    for res in detail_results:\n",
+    "        plt.plot(res['recall_curve'], res['precision_curve'], label=f\"{res['method']} (PR AUC={res['PR_AUC']:.2f})\")\n",
+    "    plt.title('Precision-Recall Curves')\n",
+    "    plt.xlabel('Recall')\n",
+    "    plt.ylabel('Precision')\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a8675dbb",
    "metadata": {},
    "outputs": [],
