--- a/nlp/S3/3_11.ipynb
+++ b/nlp/S3/3_11.ipynb
@@ -31,6 +31,38 @@
     "sample = [[\"<s>\", \"hello\", \"world\", \"</s>\"], [\"<s>\", \"hello\", \"again\", \"</s>\"]]\n",
     "u, b = compute_unigrams_bigrams(sample)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1189207.115002721"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def perplexity(test, bigram_counts, unigram_counts):\n",
+    "    N = len(test) - 1\n",
+    "    log_prob = 0\n",
+    "    for i in range(N):\n",
+    "        w1, w2 = test[i], test[i+1]\n",
+    "        prob = bigram_counts.get((w1, w2), 1e-6) / unigram_counts.get(w1, 1)\n",
+    "        log_prob += math.log(prob)\n",
+    "    return math.exp(-log_prob / N)\n",
+    "\n",
+    "# Example usage\n",
+    "test_sentence = [\"<s>\", \"email\", \"is\", \"important\", \"</s>\"]\n",
+    "perplexity(test_sentence, b, u)\n"
+   ]
   }
  ],
  "metadata": {
