--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -9,6 +9,25 @@
    "source": [
     "import torch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddaec3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if CUDA (GPU support) is available in the currently installed torch package.\n",
+    "print(torch.cuda.is_available())"
+   ]
   }
  ],
  "metadata": {
