--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -28,6 +28,25 @@
     "# Check if CUDA (GPU support) is available in the currently installed torch package.\n",
     "print(torch.cuda.is_available())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71884bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the torch package version.\n",
+    "print(torch.__version__)"
+   ]
   }
  ],
  "metadata": {
