--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -47,6 +47,25 @@
     "# Print the torch package version.\n",
     "print(torch.__version__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b531bd70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Duplicate: again checking CUDA availability (this is redundant).\n",
+    "print(torch.cuda.is_available())"
+   ]
   }
  ],
  "metadata": {
