--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -66,6 +66,25 @@
     "# Duplicate: again checking CUDA availability (this is redundant).\n",
     "print(torch.cuda.is_available())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d6b2f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print number of CUDA devices (GPUs) visible to torch.\n",
+    "print(torch.cuda.device_count())"
+   ]
   }
  ],
  "metadata": {
