--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -85,6 +85,25 @@
     "# Print number of CUDA devices (GPUs) visible to torch.\n",
     "print(torch.cuda.device_count())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b2aa02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NVIDIA GeForce RTX 3050 Ti Laptop GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the name of CUDA device 0 — will raise an error if no GPU is available.\n",
+    "print(torch.cuda.get_device_name(0))"
+   ]
   }
  ],
  "metadata": {
