--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -104,6 +104,25 @@
     "# Print the name of CUDA device 0 — will raise an error if no GPU is available.\n",
     "print(torch.cuda.get_device_name(0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84e8b695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the current active CUDA device index.\n",
+    "print(torch.cuda.current_device())"
+   ]
   }
  ],
  "metadata": {
