--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -123,6 +123,32 @@
     "# Print the current active CUDA device index.\n",
     "print(torch.cuda.current_device())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d436846d",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "# Upgrade pip (shell command; runs in notebook cell)\n",
+    "!pip install --upgrade pip \n",
+    "\n",
+    "# Install torch, torchvision, torchaudio, transformers, datasets, accelerate via pip.\n",
+    "# NOTE: installation of torch should match your CUDA version; installing like this may install CPU-only or mismatch CUDA.\n",
+    "!pip install torch torchvision torchaudio transformers datasets accelerate \n",
+    "\n",
+    "# Upgrade category-encoders package (unrelated to transformers/pytorch but OK if used elsewhere)\n",
+    "!pip install --upgrade category-encoders\n",
+    "\n",
+    "# Uninstall scikit-learn (force), probably to reinstall a specific version next — this removes the existing sklearn package.\n",
+    "!pip uninstall scikit-learn  -y\n",
+    "\n",
+    "# Install a specific sklearn version (quiet mode)\n",
+    "!pip install scikit-learn==1.6.1 -q\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
