--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -149,6 +149,19 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c67588",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "# Remove Hugging Face cache directory (shell command) — clears cached models/tokenizers\n",
+    "rm -rf ~/.cache/huggingface\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
