--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -162,6 +162,14 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f6c0681",
+   "metadata": {},
+   "source": [
+    "### Download / prepare article text"
+   ]
   }
  ],
  "metadata": {
