--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -170,6 +170,17 @@
    "source": [
     "### Download / prepare article text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "511e3d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
   }
  ],
  "metadata": {
