--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -181,6 +181,17 @@
     "import requests\n",
     "from bs4 import BeautifulSoup"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c944f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The URL to scrape — loading HTML with requests (web scraping may fail if the site blocks automated requests).\n",
+    "url = \"https://medium.com/analytics-vidhya/openai-gpt-3-language-models-are-few-shot-learners-82531b3d3122\""
+   ]
   }
  ],
  "metadata": {
